Add Peter to Authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Ales Kozumplik <ales@redhat.com>
 Jan Silhan <jsilhan@redhat.com>
+Peter Hjalmarsson <kanelxake@gmail.com>
 Radek Holy <rholy@redhat.com>
 Richard Hughes <richard@hughsie.com>
 Scott Tsai <scottt.tw@gmail.com>
